@@ -1,5 +1,6 @@
 2012-04-27 Stanislas Rolland  <typo3(arobas)sjbr.ca>
 	* Require div2007 0.10.1
+	* Fix bug #36675: Query parameter cmd is not honoured
 
 2012-04-26 Stanislas Rolland  <typo3(arobas)sjbr.ca>
 	* Fix bug #36590: Infomail form does not display email validation error
